fixed RandomRecipe bug, worked on mobile Navbar

--- a/Projects/kaufmanns-recipe-site/src/App.css
+++ b/Projects/kaufmanns-recipe-site/src/App.css
@@ -194,6 +194,7 @@
 
 .mobile-navbar-heading {
   height: 7vh;
+  min-height: 70px;
   background: linear-gradient(to right, #bdc3c7, #2c3e50);
   padding: 8px;
   box-shadow: 2px 2px 12px -1px rgba(0, 0, 0, 0.4);
